# safe-img-convert

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
safe_img_convert/: __init__.py  core.py
tests/: test_safe_img_convert.py
